Revision for august 25

--- a/Bellotti-Masters-thesis.tex
+++ b/Bellotti-Masters-thesis.tex
@@ -29,7 +29,7 @@
 
 \principaladvisor{Professor Paul G. Steffes}
 %\committeechair{Professor Ignatius Arrogant}
-\firstreader{Professor Morris B. Cohen Reference}
+\firstreader{Professor Morris B. Cohen}
 \secondreader{Professor Andrew F. Peterson}
 %\thirdreader{Professor Earl Grey}
 %\fourthreader{Professor John Smith}
@@ -81,7 +81,7 @@
 {\large
 \begin{center}
 To my parents,\\\vspace{12pt}
-Who were always putting education first.
+Who are always putting education first.
 \end{center}}
 \vfil\null
 \end{dedication}
@@ -89,19 +89,19 @@ Who were always putting education first.
 %Theses have elements.  Isn't that nice?
 %\end{preface}
 \begin{acknowledgements}
-I would like to express my deepest gratitude to my adviser Professor Paul Steffes for his support and guidance throughout the course of this research. His consent wealth of knowledge, support, and patience helped me in completing this work. Although electromagnetism, and planetary remote sensing are not fields I would have seen myself working with during my undergraduate years. Dr. Steffes, eased me into it in a way I feel allowed me to grow and enjoy it. I would also like to thank my committee members Dr. Andrew R. Peterson and Dr. Morris Cohen for providing me with the time and effort in carefully reviewing my thesis work.
+I would like to express my deepest gratitude to my adviser Professor Paul Steffes for his support and guidance throughout the course of this research. His constant wealth of knowledge, support, and patience helped me in completing this work. Although electromagnetism, and planetary remote sensing are not fields I would have seen myself working with during my undergraduate years, Dr. Steffes, eased me into it in a way I feel allowed me to grow and enjoy it. I would also like to thank my committee members Dr. Morris B. Cohen and Dr. Andrew F. Peterson for providing me with the time and effort in carefully reviewing my thesis work.
 
-The success of the laboratory experiments was made possible as a results of many contributions. I wish to thank Dr. Kirtuthika Devaraj for creating and automating the millimeter-wavelength measurement system and Dr. Thomas Hanley for the data processing code. Both of these were utilized in this research work. 
+The success of the laboratory experiments was made possible as a result of many contributions. I wish to thank Dr. Kirtuthika Devaraj for creating and automating the millimeter-wavelength measurement system and Dr. Thomas Hanley for providing the data processing code. Both of these were utilized in this research work. 
 
-The consent support and encouragement from my family has allowed me to pursue my goals throughout these years. I cannot thank them enough for pushing me to go to graduate school. 
+The constant support and encouragement from my family has allowed me to pursue my goals throughout these years. I cannot thank them enough for pushing me to go to graduate school. 
 \end{acknowledgements}
 % print table of contents, figures and tables here.
 \contents
 % if you need a "List of Symbols or Abbreviations" look into
 % gatech-thesis-gloss.sty.
-\begin{summary}
+%\begin{summary}
 
-\end{summary}
+%\end{summary}
 \end{preliminary}
 %%
 
