--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -9,14 +9,14 @@ Utilizing the millimeter-wavelength system at the Planetary Atmospheres Laborato
 
 \section{Background and Motivation}
 
-Radio absorptivity data from planetary atmospheres can be used to infer abundances of microwave absorbing constituents. Such data is obtained from entry probe radio signal absorption measurements, spacecraft radio occultation experiments, and earth-based or spacecraft based radio emission observations. This can only be done if reliable models for the microwave absorbing properties of potential constituents are available. The use of theoretically-derived microwave absorption properties for such atmospheric constituents, or models based on laboratory measurements taken under environmental conditions different then the atmosphere being studied, often leads to significant misinterpretation of the measured opacity data. Even if laboratory measurements have been already conducted, improvements in the sensitivity of microwave sensors may require higher precision laboratory measurements. 
+Radio absorptivity data from planetary atmospheres can be used to infer abundances of microwave absorbing constituents. Such data is obtained from entry probe radio signal absorption measurements, spacecraft radio occultation experiments, and earth-based or spacecraft-based radio emission observations. This can only be done if reliable models for the microwave absorbing properties of potential constituents are available. The use of theoretically-derived microwave absorption properties for such atmospheric constituents, or models based on laboratory measurements taken under environmental conditions other than the atmosphere being studied, often leads to significant misinterpretation of the measured opacity data. Even if laboratory measurements have been already conducted, improvements in the sensitivity of microwave sensors may require higher precision laboratory measurements. 
 
 Using the measured millimeter-wavelength absorption spectra of SO$_2$ in a CO$_2$ atmosphere and the resulting opacity formalism, a radiative transfer model (RTM), has now been produced. The model can be applied to earth-based and spacecraft-based radio emission measurements so as to provide planetary maps of SO$_2$ abundances at all altitudes of the Venus atmosphere. %Using this model along with observations from Sagawa \cite{observations} it will be possible to identify vertical abundances of SO$_2$ in different places of the Venus atmosphere. 
-This model can be applied to earth based millimeter-wavelength observations of Venus so as to provide planetary maps of sulfuric acid vapor and sulfur dioxide abundances at and immediately below the main cloud layer. Interpretation of such observations will complement the study of long-term variations of SO$_2$ variations at the 70 km altitude level made with Venus-orbiting ultraviolet(uv) spectrometers \cite{Esposito-2012}. 
+This model can be applied to earth-based millimeter-wavelength observations of Venus so as to provide planetary maps of sulfuric acid vapor and sulfur dioxide abundances at and immediately below the main cloud layer. Interpretation of such observations will complement the study of long-term variations of SO$_2$ variations at the 70 km altitude level made with Venus-orbiting ultraviolet(uv) spectrometers \cite{Esposito-2012}. 
 
 It is well understood that the microwave emission spectrum of Venus reflects the abundance and distribution of its constituents. The most critical limiting factor in sensing these constituents is the knowledge of there microwave absorption properties under a Venus atmosphere. 
 The millimeter-wavelength absorption of SO$_2$ at 94.1 GHz has been measured by Fahd and Steffes, \cite{Fahd-thesis}. 
-Using newer technology it is possible to measure more resonances with higher precision. Improved laboratory capabilities also allow for a wider range of environmental conditions, similar to those actually being probed, to be simulated. The millimeter-wavelength system used is able to reproduce conditions similar to those that exist on Venus. The centimeter-wave absorption spectra already measured by Steffes et al. \cite{Steffes-2014} has been used to help choose a model that best represents the centimeter and millimeter wavelength opacity of SO$_2$ in a CO$_2$ atmosphere \cite{Butler-2001}. 
+Using newer technology it is possible to measure more resonances with higher precision. Improved laboratory capabilities also allow for a wider range of environmental conditions, similar to those actually being probed, to be simulated. The millimeter-wavelength system used is able to reproduce conditions similar to those that exist on Venus. The centimeter-wave absorption spectra already measured by Steffes et al. \cite{Steffes-2014} has been used to help choose a model that best represents the centimeter- and millimeter-wavelength opacity of SO$_2$ in a CO$_2$ atmosphere \cite{Butler-2001}. 
 
 Sagawa \cite{Sagawa-2008} attributes the Venus millimeter-wavelength continuum brightness temperature variations to spatial variations in the abundances of both gaseous H$_2$SO$_4$ and SO$_2$ just below the cloud layer (48 km altitude). The developed RTM's weighting function confirms these results. Sagawa has also suggested that the effects of both constituents can be distinguished based on differences in frequency dependencies of their millimeter-wavelength opacities. However, to accomplish this, high accuracy models must be developed that characterize the opacity of each constituent and their frequency dependence. This thesis successfully characterizes SO$_2$'s absorption as a function of pressure, temperature, concentration, and frequency for both centimeter and millimeter-wavelengths. 
 
@@ -28,6 +28,6 @@ The objective of this research has been to determine the absorption properties o
 \\ \\
 \noindent Chapter 3 describes the measurement uncertainties involved with the experimental setups. An explanation of the data sets used and the analysis process are included. Finally a suggested model is presented.
 \\ \\
-\noindent Chapter 4 describes the newly-developed radiative transfer model. A discussion on radiative transfer theory is presented followed by describing the necessary parameters. The correct formula for tracing a ray through different atmospheric layers as well as methods for making the RTM computationally efficient follows. Later there is a discussion on how to integrate a simulated antenna beam pattern into this RTM to simulate an antenna beam. Ending this chapter is the model's results compared to Venus observations.
+\noindent Chapter 4 describes the newly-developed radiative transfer model. A discussion on radiative transfer theory is presented followed by describing the necessary parameters. The correct formula for tracing a ray through different atmospheric layers as well as methods for making the RTM computationally efficient follows. Later there is a discussion on how to simulate an antenna beam by integrating a simulated antenna beam pattern into this RTM. Ending this chapter is the model's results compared to Venus observations.
 \\ \\
 \noindent Chapter 5 summarizes the results of this work and presents suggestions for further investigations. An overview on this work's impact on Venus observations is provided.
