--- a/refractivity/refract.tex
+++ b/refractivity/refract.tex
@@ -3,7 +3,7 @@
 Table \ref{long} shows the normalized refractivity of SO$_2$ calculated from the data in this thesis. Methods used to calculate the refractivity and the appropriate $2\sigma$ are taken from Hanley 2008 \cite{Hanley-thesis}
 
 \begin{longtable}{||c|c|c|c|c|c||}
-\caption[An optional table caption ...]{Normalized refractivity of SO$_2$ in a CO$_2$ atmosphere. \label{long}}\\
+\caption{Normalized refractivity of SO$_2$ in a CO$_2$ atmosphere. \label{long}}\\
 \hline
 Temperature &Total Pressure & Frequency & q$_{SO_2}$ & N$_{\rho_{SO_2}}$ & $2\sigma$ error \\
 (K) &(bar) & (GHz) &(\%) & $\times 10^{-16}$&$\times 10^{-16}$\\
