--- a/model/results.tex
+++ b/model/results.tex
@@ -1,10 +1,10 @@
 \clearpage
 \section{Experimental Results}
-High accuracy laboratory measurements of the temperature and pressure dependence of the millimeter-wavelength absorption of gaseous SO$_2$ in a CO$_2$ atmospheres have been conducted at 308 and 345 K at pressures from 30 mbar to 3 bars for wavelengths between 2-4 milimeters. The following plots show the results of these absorptivity measurements with the accompanying two-sigma uncertainties. For comparison purposes these plots also show two known formalisms of SO$_2$'s absorptivity. One developed by Suleiman et al. 1997 \cite{Suleiman-thesis} and the second by Fahd and Steffes \cite{Fahd-thesis} but using the new JPL line catalog \cite{Pickett-1998}. 
+High accuracy laboratory measurements of the temperature and pressure dependence of the millimeter-wavelength absorption of gaseous SO$_2$ in a CO$_2$ atmospheres have been conducted at 308K and 345 K and at pressures from 30 mbar to 3 bars for wavelengths between 2-4 millimeters. The following plots show the results of these absorptivity measurements with the accompanying 2$\sigma$ uncertainties. For comparison purposes these plots also show two known formalisms of SO$_2$'s absorptivity. One developed by Suleiman et al. 1997 \cite{Suleiman-thesis} and the second by Fahd and Steffes \cite{Fahd-thesis} but using the new JPL line catalog \cite{Pickett-1998}. 
 
 \subsection{Accuracy of Constituents}
 
-It is necessary to ensure that the gases used in each experiment are correctly characterized. Initially the bottle of SO$_2$ was assumed to consist of 100\% SO$_2$. The bottle was sent to Airgas$_\circledR$ for analysis. It was concluded that the SO$_2$ bottle used was actually comprised of 84.7\% SO$_2$ and 15.3\% N$_2$. Since N$_2$ has no absorptivity at centimeter and millimeter-wavelengths it can be safely ignored.Thus, the SO$_2$  and CO$_2$ mole fractions do not add up to 100\% in the following plots. 
+It is necessary to ensure that the gases used in each experiment are correctly characterized. Initially the bottle of SO$_2$ was assumed to consist of 100\% SO$_2$. The bottle was sent to Airgas$_\circledR$ for analysis. It was concluded that the SO$_2$ bottle used was actually comprised of 84.7\% SO$_2$ and 15.3\% N$_2$. Since N$_2$ has no absorptivity at centimeter and millimeter-wavelengths it can be safely disregarded. Thus, the SO$_2$  and CO$_2$ mole fractions do not add up to 100\% in the following plots. 
 
 
 %Originally when the data was taken, the results fit the lineshapes of these two model's but the absorption calculated was much lower then predicted. After careful considerations of what could have caused this the SO$_2$ bottle was shipped back to Airgas\texttrademark for analysis. It was concluded that the SO$_2$ bottle used was comprised of 84.7\% SO$_2$ and 15.3\% N$_2$. Luckily N$_2$ has little to no absorptivity in the millimeter-wavelength domain so it is safely ignored.
