--- a/rtm/rtm-parameters.tex
+++ b/rtm/rtm-parameters.tex
@@ -1,7 +1,7 @@
 \section{Parameters of the Radiative Transfer Model}
-The input parameters of the radiative transfer model (RTM) are the opacity formalisms for the various atmospheric constituents, the index of refraction for each atmospheric layer,the temperature-pressure profiles, and the vertical abundance profiles for the absorbing constituents. Together the last two make up the Thermo-Chemical model of the atmosphere.
+The input parameters of the radiative transfer model (RTM) are the opacity formalisms for the various atmospheric constituents, the index of refraction for each atmospheric layer, the temperature-pressure profiles, and the vertical abundance profiles for the absorbing constituents. Together the last two make up the Thermo-Chemical model of the atmosphere.
 \subsection{Temperature-Pressure Profiles}
-The temperature-pressure profiles for the atmosphere of Venus have been obtained from the data collected using the Pioneer-Venus sounder and north probes \cite{Seiff-1980}. Figure \ref{fig:temp} shows the temperature as a function of altitude in the Venus atmosphere as reported by the Pioneer-Venus sounder and north probes. Figure \ref{fig:pres} shows the pressures a function of altitude in the Venus atmosphere as reported by the Pioneer-Venus sounder and north probes.
+The temperature-pressure profiles for the atmosphere of Venus have been obtained from the data collected using the Pioneer-Venus sounder and north probes \cite{Seiff-1980}. Figure \ref{fig:temp} shows the temperature as a function of altitude in the Venus atmosphere as reported by the Pioneer-Venus sounder and north probes. Figure \ref{fig:pres} shows the pressures as a function of altitude in the Venus atmosphere as reported by the Pioneer-Venus sounder and north probes.
 
 The sounder probe temperature represents the temperature-pressure profile in the equatorial region of the Venus atmosphere. It is used for latitudes between $-45^\circ$ and $+45^\circ$. The north probe is representative of the polar regions of Venus and it used between $\pm 45^\circ$ and $\pm90^\circ$. A physical surface temperature of 730 K is used in this RTM.
 
@@ -26,7 +26,7 @@ Although CO$_2$ is a non-polar molecule, collision induced absorption by gaseous
 \begin{equation}\label{eq:rtm-co2n2}
 \alpha_{CO_2} = 1.15\times 10^8(q_{CO_2}^2 + 0.25q_{CO_2}q_{N_2} + 0.0054q_{N_2}^2)f^2p^2T^{-5}
 \end{equation}
-where $f$ is the frequency in GHz, $p$ is the pressure in atm, T is the temperature in kelvins, q is the number mixing ratio, and $\alpha$ is the absorption in units of dB/km.
+where $f$ is the frequency in GHz, $p$ is the pressure in atm, T is the temperature in Kelvin, q is the number mixing ratio, and $\alpha$ is the absorption in dB/km.
 
 \subsubsection{Gaseous SO$_2$}
 The second major opacity contribution comes from gaseous SO$_2$. In the developed RTM, the opacity formalism developed by Fahd and Steffes \cite{Fahd-1991} is described below. The formalism developed by Fahd and Steffes was chosen over the Ben Reuven formalism by Sulieman et al. \cite{Suleiman-1996} due to it's better performance when compared to laboratory measurements as shown previously in this work.
@@ -59,23 +59,23 @@ The formalism for the opacity of clouds is taken from Fahd \cite{Fahd-thesis} an
 \begin{equation}
 \alpha_{cloud} = \frac{246 M \epsilon_r''}{\rho \lambda \left[ (\epsilon_r' +2)^2 + (\epsilon''_r)^2\right]}
 \end{equation}
-where $\rho$ is the density of the liquid sulfuric acid (1.84E9 mg/m\^3), $M$ is the bulk density of the cloud (50 mg/m\^3), $\lambda$ is the wavelength in km and $\epsilon_r'$ and $\epsilon_r''$ are the real and imaginary parts of the complex dielectric constant of the liquid which is found using
+where $\rho$ is the density of the liquid sulfuric acid (1.84E9 mg/m\^{}3), $M$ is the bulk density of the cloud (50 mg/m\^{}3), $\lambda$ is the wavelength in km and $\epsilon_r'$ and $\epsilon_r''$ are the real and imaginary parts of the complex dielectric constant of the liquid which is found using
 \begin{equation}
 \epsilon_r = 3.3+\frac{84.2}{\left(1+(2\pi f (1.7\times 10^-11\right))^{0.91}}
 \end{equation} 
-with f being the frequency in Hz. 
-Since clouds are only formed between 48-50km the absorption is only appropriate for the temperatures associated with that range of altitudes. 
+with f if the frequency in Hz. 
+Since clouds are only formed between 48-50 km the absorption is only appropriate for the temperatures associated with that range of altitudes. 
 
 \subsection{Abundance Profiles}
-The principal constituent of the Venus atmosphere is gaseous CO$_2$ which comprises 96.5\% of the atmosphere. Gaseous N$_2$ constitutes about 3.5\%. In this RTM these mole fractions are used for all altitudes of the Venus atmosphere. 
+The principal constituent of the Venus atmosphere is gaseous CO$_2$ which comprises 96.5\% of the atmosphere. Gaseous N$_2$ constitutes about 3.5\% of the atmosphere. In this RTM these mole fractions are used for all altitudes of the Venus atmosphere. 
 
-For gaseous H$_2$SO$_4$ the developed RTM implements a saturation vapor pressure model as done in Kolodner \cite{Kolodner-thesis}. This model is based on Mariner 10 radio occultation experiments observed by Lipa and Tyler \cite{Lipa-1979} For altitudes less then 48 km it is assumed that the H$_2$SO$_4$ mixing ratio is zero. For altitudes above 48 km the partial pressure of H$_2$SO$_4$ is
+For gaseous H$_2$SO$_4$, the developed RTM implements a saturation vapor pressure model as done in Kolodner \cite{Kolodner-thesis}. This model is based on Mariner 10 radio occultation experiments observed by Lipa and Tyler \cite{Lipa-1979}. For altitudes less then 48 km it is assumed that the H$_2$SO$_4$ mixing ratio is zero. For altitudes above 48 km the partial pressure of H$_2$SO$_4$ is
 \begin{equation}
 P_{H_2SO_4} = \exp\left(10156\left[ -\frac{1}{T}+ \frac{0.38}{T_c-T_o}\left(1+\ln\frac{T_o}{T} - \frac{T_o}{T}\right) \right] - \frac{\Delta F}{R T} + 16.259 \right)
 \end{equation}
 where $P_{H_2SO_4}$ is the partial pressure of H$_2$SO$_4$ (in atm), $T$ is the temperature in Kelvin, $T_c$ is the critical temperature of 910.5 K, $T_o$ is the reference temperature of 375 K, $\Delta F$ is change in chemical potentials (477.60 J/mole) \cite{Giauque-1960}, and $R$ is the ideal gas constant (8.3143 J/mole-K). Different abundance profiles can be used in place of this simple one. %See the Appendix for a list of all H$_2$SO$_4$ abundance profiles implemented in the RTM.
 
-Finally a variable abundance profile for gaseous SO$_2$ is implemented in the developed RTM. A uniform mixing ratio of any value can be selected for altitudes below the main cloud layer (i.e. < 48 km). Above the cloud layer the SO$_2$ abundance profile is assumed to decay exponentially with a scale height of 3.3 km \cite{Na-1994}. This is calculated by the following
+Finally a variable abundance profile for gaseous SO$_2$ is implemented in the developed RTM. A uniform mixing ratio of any value can be selected for altitudes below the main cloud layer (i.e. $<$ 48 km). Above the cloud layer the SO$_2$ abundance profile is assumed to decay exponentially with a scale height of 3.3 km \cite{Na-1994}. This is calculated by the following
 \begin{equation}
 q_{SO_2}(z) = \left\{
      \begin{array}{lr}
@@ -92,7 +92,7 @@ The refractive index is important in calculating the path that a ray takes throu
 \begin{equation}
 N(z) = \frac{NP(z)}{RT(z)}
 \end{equation}
-where $P(z)$ is the pressure, $T(z)$ is the temperature, $R$ is the ideal gas constant, and $N$ is the normalized refractivity of a 95.5\% CO$_2$ 3.5\% N$_2$ atmosphere ($251.09 kg/m^3$)\cite{Essen-1951}. the refractive index profile $n(z)$ is defined in terms of refractivity via
+where $P(z)$ is the pressure, $T(z)$ is the temperature, $R$ is the ideal gas constant, and $N$ is the normalized refractivity of a 95.5\% CO$_2$ 3.5\% N$_2$ atmosphere ($251.09 kg/m^3$) \cite{Essen-1951}. the refractive index profile $n(z)$ is defined in terms of refractivity via
 \begin{equation}
 n(z) = 1 \times 10^{-6} N(z) +1
 \end{equation}
