--- a/summary/summary.tex
+++ b/summary/summary.tex
@@ -4,17 +4,17 @@ The objective of this Master's Thesis has been to advance the understanding of t
 With the approaching completion of the ESA Venus Express Mission, earth-based centimeter and millimeter-wavelength observations of Venus are becoming more important. Knowledge of the absorption properties of sulfur dioxide will be important in analyzing data from these earth-based observations. 
 \section{Significant Results}
 
-Laboratory measurements taken of the millimeter-wavelength absorption of sulfur dioxide under Venus conditions has verified the formalism for sulfur dioxide opacity developed by Fahd and Steffes (1991) \cite{Fahd-1991}. The model is able to fit 85.88\% of the laboratory data (centimeter-wavelength done by Steffes et al. 2014 \cite{Steffes-2014}, millimeter-wavelength presented in this work) within $2\sigma$ uncertainty. The bounds verified by laboratory data are set to frequencies between 1-150 GHz, temperatures between 307-550 K, and concentrations between 0-100\% of SO$_2$/volume. 
+Laboratory measurements taken of the millimeter-wavelength absorption of sulfur dioxide under Venus conditions has verified the formalism for sulfur dioxide opacity developed by Fahd and Steffes \cite{Fahd-1991}. The model is able to fit 85.88\% of the laboratory data (centimeter-wavelength done by Steffes et al. 2014 \cite{Steffes-2014}, millimeter-wavelength presented in this work) within $2\sigma$ uncertainty. The bounds verified by laboratory data are set to frequencies between 1-150 GHz, temperatures between 307-550 K, and concentrations between 0-100\% of SO$_2$/volume. 
 \section{Application to Venus Observations}
-Verifying that the Fahd and Steffes (1991) \cite{Fahd-1991} model correctly predicted the absorption of SO$_2$ at centimeter and millimeter-wavelengths allows for analysis of earth-based observations from radio telescopes. Verifying the model has allowed for the development of a Radiative Transfer Model (RTM) which can successfully simulate and predict expected observations of Venus. 
+Verifying that the Fahd and Steffes \cite{Fahd-1991} model correctly predicted the absorption of SO$_2$ at centimeter and millimeter-wavelengths allows for analysis of earth-based observations from radio telescopes. Verifying the model has allowed for the development of a Radiative Transfer Model (RTM) which can successfully simulate and predict expected observations of Venus. 
 
-One such radio telescope is the Combined Array for Research in Millimeter-wave Astronomy (CARMA). Observations of Venus using CARMA have been recently completed by Devaraj \cite{Devaraj-CARMA} at frequencies ranging from 98 - 115 GHz. Using these maps, along with the RTM developed, maps of the variations observed can be produced. Variation in these maps can be used to identify anomalies in Venus's atmosphere such as storms or potential volcanic eruptions.
+One such radio telescope is the Combined Array for Research in Millimeter-wave Astronomy (CARMA). Observations of Venus using CARMA have been recently completed by Devaraj \cite{Devaraj-CARMA} at frequencies ranging from 98-115 GHz. Using these maps, along with the RTM developed, maps of the variations observed can be produced. Variation in these maps can be used to identify anomalies in Venus's atmosphere such as storms or potential volcanic eruptions.
 
 Along with CARMA, other observations of Venus have been made. One such observation was done by Sagawa \cite{Sagawa-2008}. Sagawa mentions it is possible to extract abundance profiles for both SO$_2$ and H$_2$SO$_4$ from observations done at two different frequencies. This requires knowledge of the frequency dependence of the absorption from both gasses. While this work characterizes the absorption of SO$_2$, work is still needed to characterize H$_2$SO$_4$'s absorption spectrum in the millimeter-wavelength regime. 
 
-Sub-millimeter-wavelength observations where done with ALMA (Atacama Large Millimeter Array) in 2011 \cite{ALMA-2013}. These observations were the first high-resolution mapping of the day hemisphere at mm-wavelengths. They showed how the mesosphere was affected by solar-winds, the mesospheric water distribution, and the moderate equatorial zonal winds. Using this data along with the developed RTM and methods described in Sagawa \cite{Sagawa-2008} it is possible to retrieve an abundance profile for multiple constituents of Venus's atmosphere.
+Sub-millimeter-wavelength observations where done with ALMA (Atacama Large Millimeter Array) in 2011 \cite{ALMA-2013}. These observations were the first high-resolution mapping of the day hemisphere at millimeter-wavelengths. They showed how the mesosphere was affected by solar-winds, the mesospheric water distribution, and the moderate equatorial zonal winds. Using this data along with the developed RTM and methods described in Sagawa \cite{Sagawa-2008}, it is possible to retrieve an abundance profile for multiple constituents of Venus's atmosphere.
 
 \section{Suggestions for Future Work}
-Many improvements can be made to the newly-developed RTM. The biggest is an accurate formalism for the millimeter-wavelength absorption of H$_2$SO$_4$. The formalism used in the current model was developed from centimeter-wavelength data. A new laboratory measurement system to better characterize H$_2$SO$_4$'s millimeter-wavelength absorption spectrum is being developed at Georgia Tech's Planetary Atmospheres Lab. These measurements, along with those from Kolodner et al. \cite{Kolodner-1998} should help develop a formalism for H$_2$SO$_4$ absorption spectra at centimeter and millimeter-wavelengths. 
+Many improvements can be made to the newly-developed RTM. The biggest is an accurate formalism for the millimeter-wavelength absorption of H$_2$SO$_4$. The formalism used in the current model was developed from centimeter-wavelength data. A new laboratory measurement system to better characterize H$_2$SO$_4$'s millimeter-wavelength absorption spectrum is being developed at Georgia Institute of Technology's Planetary Atmospheres Lab. These measurements, along with those from Kolodner et al. \cite{Kolodner-1998} should help develop a formalism for H$_2$SO$_4$ absorption spectra at centimeter and millimeter-wavelengths. 
 
 The development of a Radiative Transfer Model is the first step in creating an inverse model of the Venus atmosphere. Creation of such model will allow for retrieval of abundance profiles and temperature-pressure profiles from observations of the planet. A retrieval algorithms has been developed for H$_2$SO$_4$ and temperature at centimeter wavelengths (Jenkins et al. \cite{Jenkins-2002}).
